Azure_version/part-2-use-cases/optional/kubernetes/3-add-ingress/azure-vote-front-service.clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: azure-vote-front
