Azure_version/part-2-use-cases/optional/kubernetes/3-add-ingress/azure-vote-http-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: azure-vote-front
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-front-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /vote(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80
